fixed navbar overflowing and card design

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav {
 	appearance: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1040px) {
 	.hamburger {
 		display: none;
 	}
@@ -66,7 +66,7 @@ nav {
 	background: var(--white);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1040px) {
 	.nav-menu {
 		position: absolute;
 		top: 100%;
@@ -93,7 +93,7 @@ nav {
 	justify-content: space-between;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width:1040px) {
 	.nav-list {
 		flex-direction: column;
 		padding: var(--nav-padding);
@@ -223,7 +223,6 @@ nav {
 
 .card {
 	width: 30rem;
-	aspect-ratio: 25/30;
 	background: var(--white);
 	border: 2.5rem solid var(--white);
 	border-radius: 0rem 5rem 0rem 5rem;
@@ -242,6 +241,11 @@ nav {
 	text-align: center;
 	margin-top: 1.5rem;
 	font-size: 2.5rem;
+	margin-bottom: 2rem;
+}
+
+.card-details{
+	text-align: center;
 }
 
 .order-btn {
